style(fixed-items): change z-index to 2

--- a/src/styles/partial-style/float-components/_fixed-items.scss
+++ b/src/styles/partial-style/float-components/_fixed-items.scss
@@ -21,7 +21,7 @@ body{
 
         .rigth-bottom-btn{
             position: fixed;
-            z-index: 1;
+            z-index: 2;
             bottom: 40px;
             right: 2.5%;
         }
